changed video file path

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ font-size: 20px
   <div class="grid-item">
     <div id="bottom6">f.</div>
         <video width="200" height="300" controls>
-          <source src="anxiety.mov" type="video/mp4">
+          <source src="https://github.com/sinha246/sonicsounds/blob/master/anxiety.mov" type="video/mp4">
         </video>
   </div>
   <div class="grid-item">
